[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfitness"
description = 'Tools for working with fitness data like FIT, GPX,, power and heartrate.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["fit", "bicycle", "power", "heartrate",]
authors = [
  { name = "Vincent Davis", email = "vincent@heteroskedastic.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas", "fitdecode"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/vincentdavis/pyfitness"
Issues = "https://github.com/vincentdavis/pyfitness/issues"
Source = "https://github.com/vincentdavis/pyfitness"

[tool.hatch.version]
path = "pyfitness/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pyfitness --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pyfitness/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
